--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,10 @@
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica,
     Arial, sans-serif;
-  margin: auto;
-  max-width: 38rem;
-  padding: 2rem;
+  margin: 0;
+  padding:0;
+  /* max-width: 38rem; */
+  /* padding: 2rem; */
+  width: 100%;
+  height: 100vh;
 }
